[#457] fixed alignment spinner vk

--- a/app/stylesheets/less/blocks/button.less
+++ b/app/stylesheets/less/blocks/button.less
@@ -119,7 +119,7 @@
 
   // Loader
   .spinner {
-    top: -1px;
+    top: -3px;
   }
 }
 
